// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined css-oi5qgo-MuiButtonGroup-root"
    role="group"
  >
    Click me
  </div>
</div>
`;

exports[`ButtonGroup ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-disableElevation css-czekkb-MuiButtonGroup-root"
    role="group"
  >
    Click me
  </div>
</div>
`;

exports[`ButtonGroup ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-disableElevation css-b3pmn-MuiButtonGroup-root"
    role="group"
  >
    Click me
  </div>
</div>
`;

exports[`ButtonGroup ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-disableElevation css-b3pmn-MuiButtonGroup-root"
    role="group"
  >
    Click me
  </div>
</div>
`;

exports[`ButtonGroup ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-disableElevation css-czekkb-MuiButtonGroup-root"
    role="group"
  >
    Click me
  </div>
</div>
`;
